# bv-circleci-mono

./: .gitignore  README.md  docker-compose.yaml
.circleci/: config.yaml  config.yml  continue-config.yml
backend/: .gitignore  Dockerfile.pipenv.local  Dockerfile.poetry.local  Dockerfile.pure.local  main.py  pyproject.toml
backend/app/: schemas.py  services.py
backend/app/db/: database.py  models.py
backend/db/: database.py  models.py
django/: pyproject.toml
django/classroom/: models.py
django/classroom/migrations/: 0001_make_base_models.py
django/classroom/models/: asana.py  base.py  field.py
django/config/: settings.py
fastapi/: Dockerfile.pipenv.local  Dockerfile.poetry.local  Dockerfile.pure.local  pyproject.toml
fastapi/app/: schemas.py  settings.py
fastapi/app/db/: models.py
frontend/: .pnp.cjs  Dockerfile.local  package.json
frontend/components/: hello.tsx
frontend/pages/: hello.tsx
