[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sungwook.choi <sungwook.csw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
uvicorn = "^0.18.3"
fastapi = "^0.82.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
