[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sungwook.choi <sungwook.csw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
uvicorn = "^0.18.3"
fastapi = "^0.82.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.41"}
psycopg2 = "^2.9.3"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
asyncpg = "^0.26.0"
databases = {extras = ["asyncpg"], version = "^0.6.1"}

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
ipython = "^8.5.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
